sgd/reproduction/playground/objects/SVMXC__Service_Contract__c.object
<CustomObject>
    <fields>
        <fullName>SVMXC__Exchange_Type__c</fullName>
        <description>Type of exchange allowed as per the service contract</description>
        <label>Exchange Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance Exchange</fullName>
                </value>
                <value>
                    <fullName>Return Exchange</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Labor_Rounding_Type__c</fullName>
        <label>Rounding Type (Labor)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Round Up</fullName>
                </value>
                <value>
                    <fullName>Round Down</fullName>
                </value>
                <value>
                    <fullName>Actuals</fullName>
                    <default>true</default>
                    <label>Actuals</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Minimum_Labor__c</fullName>
        <description>Minimum labor price for overtime</description>
        <label>Minimum Labor (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Minimum_Travel__c</fullName>
        <description>Minimum labor price for travel</description>
        <label>Minimum Travel (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Primary_Technician__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Primary technician for this service contract. Reference to an existing Technician record in ServiceMax</description>
        <label>Primary Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Service Contracts (Primary Technician)</relationshipLabel>
        <relationshipName>Service_Contract_Primary_Tech</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Renewal_Date__c</fullName>
        <description>Date on which the contract was renewed</description>
        <inlineHelpText>Date on which the contract was renewed</inlineHelpText>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Renewal_Notes__c</fullName>
        <description>Service/Maintenance Contract Renewal Notes</description>
        <inlineHelpText>Service/Maintenance Contract Renewal Notes</inlineHelpText>
        <label>Renewal Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Renewal_Number__c</fullName>
        <description>This is incremented automatically when an existing service contract is renewed</description>
        <inlineHelpText>This is incremented automatically when an existing service contract is renewed</inlineHelpText>
        <label>Renewal Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Renewed_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The original service contract from which this contract was renewed. Is populated automatically when a service contract is renewed</description>
        <inlineHelpText>The original service contract from which this contract was renewed. Is populated automatically when a service contract is renewed</inlineHelpText>
        <label>Renewed From</label>
        <referenceTo>SVMXC__Service_Contract__c</referenceTo>
        <relationshipLabel>Renewal History</relationshipLabel>
        <relationshipName>R00N70000001hzdoEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Round_Labor_To_Nearest__c</fullName>
        <description>Maximum minutes a technician can work as overtime</description>
        <label>Round Labor To Nearest (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Round_Travel_To_Nearest__c</fullName>
        <description>Upon travel based on timing, what is the increment used to round off travel time</description>
        <label>Round Travel to Nearest (Mins)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__SESSION_ID__c</fullName>
        <description>Not used</description>
        <formula>$Api.Session_ID</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SESSION ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Sales_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the internal sales representative responsible for or involved in selling this contract. Is a lookup to a valid salesforce user</description>
        <inlineHelpText>Name of the internal sales representative responsible for or involved in selling this contract. Is a lookup to a valid salesforce user</inlineHelpText>
        <label>Sales Rep</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001hzbvEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to bind check box in List of Service Contract Line records on Visualforce page with controller.</description>
        <inlineHelpText>Field to bind check box in List of Service Contract Line records on Visualforce page with controller.</inlineHelpText>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Contract_Notes__c</fullName>
        <description>Free text that shows any exceptions or conditions that apply when entitling the customer based on this contract. Information entered here is displayed on the Case Entitlement when this contract is used.</description>
        <inlineHelpText>Define exceptions or conditions that apply when entitling the customer based on this contract. Information entered here is displayed on the Case Entitlement when this contract is used.</inlineHelpText>
        <label>Service Contract Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Level__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service level the customer is entitled to by this contract. Is a lookup to an existing service level record</description>
        <inlineHelpText>Service level the customer is entitled to by this contract. Is a lookup to an existing service level record</inlineHelpText>
        <label>SLA Terms</label>
        <referenceTo>SVMXC__Service_Level__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>R00N70000001hzdfEAA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Plan</label>
        <referenceTo>SVMXC__Service_Plan__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Pricebook__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Pricebook</label>
        <referenceTo>SVMXC__Service_Pricebook__c</referenceTo>
        <relationshipLabel>Service/Maintenance Contracts</relationshipLabel>
        <relationshipName>Service_Maintenance_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Start_Date__c</fullName>
        <description>Start date of the service contract</description>
        <inlineHelpText>Start date of the service contract</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SVMXC__Travel_Rounding_Type__c</fullName>
        <label>Rounding Type (Travel)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Round Up</fullName>
                </value>
                <value>
                    <fullName>Round Down</fullName>
                </value>
                <value>
                    <fullName>Actuals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Weeks_To_Renewal__c</fullName>
        <description>Number of weeks before the contract expires. Calculated automatically</description>
        <formula>(SVMXC__End_Date__c - TODAY()) / 7</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weeks To Renewal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Zone__c</fullName>
        <label>Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Zone 1</fullName>
                </value>
                <value>
                    <fullName>Zone 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Service/Maintenance Contract</label>
    <listViews>
        <fullName>SVMXC__Active_Service_Contracts</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Company__c</columns>
        <columns>SVMXC__Contact__c</columns>
        <columns>SVMXC__Renewal_Date__c</columns>
        <columns>SVMXC__Renewal_Number__c</columns>
        <columns>SVMXC__Start_Date__c</columns>
        <columns>SVMXC__End_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SVMXC__Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Service Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SVMXC__Inactive_Service_Contracts</fullName>
        <columns>NAME</columns>
        <columns>SVMXC__Active__c</columns>
        <columns>SVMXC__Company__c</columns>
        <columns>SVMXC__Contact__c</columns>
        <columns>SVMXC__Renewal_Date__c</columns>
        <columns>SVMXC__Renewal_Number__c</columns>
        <columns>SVMXC__Start_Date__c</columns>
        <columns>SVMXC__End_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SVMXC__Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Inactive Service Contracts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contract Name/Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service/Maintenance Contracts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SMAX_PS_Account_chk_On_Contract</fullName>
        <active>true</active>
        <errorConditionFormula>AND(SMAX_PS_Site__c != null ,  SMAX_PS_EndUser__c != SMAX_PS_Site__r.SVMXC__Account__c)</errorConditionFormula>
        <errorMessage>エンドユーザの設置場所のみ設定してください</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Check_Delivery_Condition</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
 AND(
  ISPICKVAL(SMAX_PS_Delivery_Condition__c, &quot;9999&quot;),
  ISBLANK(SMAX_PS_Delivery_Cond_Special__c)
 ), 
true, false)</errorConditionFormula>
        <errorMessage>引き渡し条件（特殊）を入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Check_Delivery_Condition2</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
 AND(
  NOT(ISPICKVAL(SMAX_PS_Delivery_Condition__c, &quot;9999&quot;)),
  NOT(ISBLANK(SMAX_PS_Delivery_Cond_Special__c))
 ), 
true, false)</errorConditionFormula>
        <errorMessage>特殊の場合のみ引き渡し条件（特殊）を入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Check_HOR_SO</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISPICKVAL(SMAX_PS_Status__c , &apos;HOR&apos;), SMAX_PS_HOR_SO__c = null), true, false)</errorConditionFormula>
        <errorMessage>HOR - 営業所を入力してください</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Required_LostReason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(SMAX_PS_Status__c,&quot;Lost&quot;),
   OR(ISPICKVAL(SMAX_PS_LostReason__c ,&quot;&quot;),  ISBLANK(SMAX_PS_LostReasonTxt__c) )
)</errorConditionFormula>
        <errorMessage>失注の場合、失注理由と詳細を入力してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SVMXC__Service_Contract_Future_End_Date</fullName>
        <active>true</active>
        <description>Service contract end date should be in the future</description>
        <errorConditionFormula>AND(ISNEW(),  SVMXC__End_Date__c  &lt;  TODAY())</errorConditionFormula>
        <errorDisplayField>SVMXC__End_Date__c</errorDisplayField>
        <errorMessage>End date should be a future date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SVMXC__Service_Contract_Start_End_Date</fullName>
        <active>true</active>
        <description>Service contract should have valid start and end dates</description>
        <errorConditionFormula>SVMXC__End_Date__c  &lt;  SVMXC__Start_Date__c</errorConditionFormula>
        <errorDisplayField>SVMXC__End_Date__c</errorDisplayField>
        <errorMessage>End date should be greater or equal to Start date.</errorMessage>
    </validationRules>
</CustomObject>